--- a/index.html
+++ b/index.html
@@ -4,11 +4,99 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="format-detection" content="telephone=no">
+    <meta name="description" content="This is my portfolio site.">
+    <meta name="keyword" content="bolt, bootstrap, portfolio">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Bolt - Free Bootstrap 3 Theme</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
   </head>
   <body>
-
+    <div class="wrapper">
+      <header class="header">
+        <div class="inner header-inner">
+          <i class="fas fa-bolt"></i>
+          <a href="#" class="contact-button">Contact</a>
+        </div>
+      </header>
+      <main>
+        <div class="theme">
+          <div class="inner theme-inner">
+            <h1 class="main-theme">Bolt Theme</h1>
+            <p class="main-theme-p">FREE BOOTSTRAP THEMES</p>
+          </div>
+        </div>
+        <div class="section-container">
+          <section class="section-inner">
+            <img src="./img/iphone.png" class="section-image">
+            <p class="section-inner__title">what we can do?</p>
+            <p class="section-inner__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+          </section>
+      </div>
+        <article class="article-container">
+          <p class="article-title">OUR LATEST WORK</p>
+          <div class="article-images">
+            <div class="article-image-container">
+              <img src="./img/01.jpg" class="article-image">
+            </div>
+            <div class="article-image-container">
+              <img src="./img/02.jpg" class="article-image">
+            </div>
+            <div class="article-image-container">
+              <img src="./img/03.jpg" class="article-image">
+            </div>
+            <div class="article-image-container">
+              <img src="./img/04.jpg" class="article-image">
+            </div>
+            <div class="article-image-container">
+              <img src="./img/05.jpg" class="article-image">
+            </div>
+            <div class="article-image-container">
+              <img src="./img/06.jpg" class="article-image">
+            </div>
+          </div>
+          <div class="article-container-bottom">
+            <p class="article-container__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+            <a href="#" class="email-me__button">Email Me!</a>
+          </div>
+        </article>
+        <section class="section-bottom">
+          <p class="section-bottom-title">OUR SKILLS</p>
+          <div class="section-bottom-images">
+            <div class="section-bottom-image">
+              <img src="./img/circle_01.png">
+              <p class="section-bottom-image__text">JavaScript</p>
+            </div>  
+            <div class="section-bottom-image">
+              <img src="./img/circle_02.png">
+              <p class="section-bottom-image__text">Bootstrap</p>
+            </div>  
+            <div class="section-bottom-image">
+              <img src="./img/circle_03.png">
+              <p class="section-bottom-image__text">WordPress</p>
+            </div>  
+            <div class="section-bottom-image">
+              <img src="./img/circle_04.png">
+              <p class="section-bottom-image__text">Photoshop</p>
+            </div>  
+          </div>
+        </section>
+        <nav class="sns-wrapper">
+            <div class="sns-content">
+              <a href="#" class="btn fab fa-facebook-f"></a>
+              <a href="#" class="btn fal fa-basketball-ball"></a>
+              <a href="#" class="btn fab fa-twitter"></a>
+              <a href="#" class="btn fas fa-envelope"></a>
+            </div>
+        </nav>
+      </main>
+      <footer class="footer">
+        <div class="inner footer-inner">
+          <p class="footer__text">Crafted with♡by BlackTie.co.</p>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
