index.html bolt pc版　取組み

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <div class="inner header-inner">
           <i class="fas fa-bolt"></i>
           <a href="#" class="contact-button">Contact</a>
+          <div class="hamburger-box">
+            <i class="fas fa-bars"></i>
+          </div>
         </div>
       </header>
       <main>
@@ -28,65 +31,67 @@
             <p class="main-theme-p">FREE BOOTSTRAP THEMES</p>
           </div>
         </div>
-        <div class="section-container">
+        <div class="inner section-container">
           <section class="section-inner">
-            <img src="./img/iphone.png" class="section-image">
+            <div class="section-image-container">
+              <img src="./img/iphone.png" class="section-image">
+            </div>
             <p class="section-inner__title">what we can do?</p>
             <p class="section-inner__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
           </section>
-      </div>
-        <article class="article-container">
+        </div>
+        <article class="inner article-container">
           <p class="article-title">OUR LATEST WORK</p>
           <div class="article-images">
-            <div class="article-image-container">
+            <a href="#" class="article-image-container">
               <img src="./img/01.jpg" class="article-image">
-            </div>
-            <div class="article-image-container">
+            </a>
+            <a href="#" class="article-image-container">
               <img src="./img/02.jpg" class="article-image">
-            </div>
-            <div class="article-image-container">
+            </a>
+            <a href="#" class="article-image-container">
               <img src="./img/03.jpg" class="article-image">
-            </div>
-            <div class="article-image-container">
+            </a>
+            <a href="#" class="article-image-container">
               <img src="./img/04.jpg" class="article-image">
-            </div>
-            <div class="article-image-container">
+            </a>
+            <a href="#" class="article-image-container">
               <img src="./img/05.jpg" class="article-image">
-            </div>
-            <div class="article-image-container">
+            </a>
+            <a href="#" class="article-image-container">
               <img src="./img/06.jpg" class="article-image">
-            </div>
+            </a>
           </div>
           <div class="article-container-bottom">
             <p class="article-container__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
             <a href="#" class="email-me__button">Email Me!</a>
           </div>
         </article>
-        <section class="section-bottom">
+        <section class="inner section-bottom">
           <p class="section-bottom-title">OUR SKILLS</p>
           <div class="section-bottom-images">
-            <div class="section-bottom-image">
+            <a href="#" class="section-bottom-image">
               <img src="./img/circle_01.png">
               <p class="section-bottom-image__text">JavaScript</p>
-            </div>  
-            <div class="section-bottom-image">
+            </a>  
+            <a href="#" class="section-bottom-image">
               <img src="./img/circle_02.png">
               <p class="section-bottom-image__text">Bootstrap</p>
-            </div>  
-            <div class="section-bottom-image">
+            </a>  
+            <a href="#" class="section-bottom-image">
               <img src="./img/circle_03.png">
               <p class="section-bottom-image__text">WordPress</p>
-            </div>  
-            <div class="section-bottom-image">
+            </a>  
+            <a href="#" class="section-bottom-image">
               <img src="./img/circle_04.png">
               <p class="section-bottom-image__text">Photoshop</p>
-            </div>  
+            </a>  
           </div>
         </section>
-        <nav class="sns-wrapper">
+        <nav class="inner sns-wrapper">
             <div class="sns-content">
               <a href="#" class="btn fab fa-facebook-f"></a>
-              <a href="#" class="btn fal fa-basketball-ball"></a>
+              <a href="#" class="btn fas fa-basketball-ball"></a>
               <a href="#" class="btn fab fa-twitter"></a>
               <a href="#" class="btn fas fa-envelope"></a>
             </div>
@@ -94,7 +99,7 @@
       </main>
       <footer class="footer">
         <div class="inner footer-inner">
-          <p class="footer__text">Crafted with♡by BlackTie.co.</p>
+          <p class="footer__text">Crafted with&nbsp;<i class="fas fa-heart">&nbsp;</i>by BlackTie.co.</p>
         </div>
       </footer>
     </div>
