index.html bolt 修正

--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
     <div class="wrapper">
       <header class="header">
         <div class="inner header-inner">
-          <i class="fas fa-bolt"></i>
-          <a href="#" class="contact-button">Contact</a>
+          <div class="header-left-btn-box">
+            <i class="fas fa-bolt"></i>
+          </div>
+          <div class="header-right-btn-box">
+            <a href="#" class="contact-button">Contact</a>
+          </div>
           <div class="hamburger-box">
             <i class="fas fa-bars"></i>
           </div>
@@ -31,75 +35,97 @@
             <p class="main-theme-p">FREE BOOTSTRAP THEMES</p>
           </div>
         </div>
-        <div class="inner section-container">
-          <section class="section-inner">
+        <div class="section-container">
+          <section class="inner section-inner">
             <div class="section-image-container">
               <img src="./img/iphone.png" class="section-image">
             </div>
-            <p class="section-inner__title">what we can do?</p>
-            <p class="section-inner__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            <div class="section-text-container">
+              <h2 class="section-inner__title">what we can do?</h2>
+              <p class="section-inner__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            </div>
           </section>
         </div>
         <article class="inner article-container">
-          <p class="article-title">OUR LATEST WORK</p>
-          <div class="article-images">
-            <a href="#" class="article-image-container">
-              <img src="./img/01.jpg" class="article-image">
-            </a>
-            <a href="#" class="article-image-container">
-              <img src="./img/02.jpg" class="article-image">
-            </a>
-            <a href="#" class="article-image-container">
-              <img src="./img/03.jpg" class="article-image">
-            </a>
-            <a href="#" class="article-image-container">
-              <img src="./img/04.jpg" class="article-image">
-            </a>
-            <a href="#" class="article-image-container">
-              <img src="./img/05.jpg" class="article-image">
-            </a>
-            <a href="#" class="article-image-container">
-              <img src="./img/06.jpg" class="article-image">
-            </a>
+          <div class="inner article-container-inner">
+            <h2 class="article-title">OUR LATEST WORK</h2>
+            <div class="article-images">
+              <a href="#" class="article-image-container">
+                <img src="./img/01.jpg" class="article-image">
+              </a>
+              <a href="#" class="article-image-container">
+                <img src="./img/02.jpg" class="article-image">
+              </a>
+              <a href="#" class="article-image-container">
+                <img src="./img/03.jpg" class="article-image">
+              </a>
+              <a href="#" class="article-image-container">
+                <img src="./img/04.jpg" class="article-image">
+              </a>
+              <a href="#" class="article-image-container">
+                <img src="./img/05.jpg" class="article-image">
+              </a>
+              <a href="#" class="article-image-container">
+                <img src="./img/06.jpg" class="article-image">
+              </a>
+            </div>
           </div>
           <div class="article-container-bottom">
-            <p class="article-container__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
-            <a href="#" class="email-me__button">Email Me!</a>
+            <div class="article-container-bottom-box">
+              <p class="article-container__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+            </div>
+            <div class="email-me__button-box">
+              <a href="#" class="email-me__button">Email Me!</a>
+            </div>
           </div>
         </article>
-        <section class="inner section-bottom">
-          <p class="section-bottom-title">OUR SKILLS</p>
-          <div class="section-bottom-images">
-            <a href="#" class="section-bottom-image">
-              <img src="./img/circle_01.png">
-              <p class="section-bottom-image__text">JavaScript</p>
-            </a>  
-            <a href="#" class="section-bottom-image">
-              <img src="./img/circle_02.png">
-              <p class="section-bottom-image__text">Bootstrap</p>
-            </a>  
-            <a href="#" class="section-bottom-image">
-              <img src="./img/circle_03.png">
-              <p class="section-bottom-image__text">WordPress</p>
-            </a>  
-            <a href="#" class="section-bottom-image">
-              <img src="./img/circle_04.png">
-              <p class="section-bottom-image__text">Photoshop</p>
-            </a>  
+        <section class="section-bottom">
+          <div class="inner section-bottom-inner">
+            <h2 class="section-bottom-title">OUR SKILLS</h2>
+            <div class="section-bottom-images">
+              <a href="#" class="section-bottom-image">
+                <img src="./img/circle_01.png">
+                <p class="section-bottom-image__text">JavaScript</p>
+              </a>  
+              <a href="#" class="section-bottom-image">
+                <img src="./img/circle_02.png">
+                <p class="section-bottom-image__text">Bootstrap</p>
+              </a>  
+              <a href="#" class="section-bottom-image">
+                <img src="./img/circle_03.png">
+                <p class="section-bottom-image__text">WordPress</p>
+              </a>  
+              <a href="#" class="section-bottom-image">
+                <img src="./img/circle_04.png">
+                <p class="section-bottom-image__text">Photoshop</p>
+              </a>  
+            </div>
           </div>
         </section>
-        <nav class="inner sns-wrapper">
+        <nav class="sns-wrapper">
+          <div class="inner sns-wrapper-inner">
             <div class="sns-content">
-              <a href="#" class="btn fab fa-facebook-f"></a>
-              <a href="#" class="btn fas fa-basketball-ball"></a>
-              <a href="#" class="btn fab fa-twitter"></a>
-              <a href="#" class="btn fas fa-envelope"></a>
+              <div class="btn-box">
+                <a href="#" class="btn fab fa-facebook-f"></a>
+              </div>
+              <div class="btn-box">
+                <a href="#" class="btn fas fa-basketball-ball"></a>
+              </div>
+              <div class="btn-box">
+                <a href="#" class="btn fab fa-twitter"></a>
+              </div>
+              <div class="btn-box">
+                <a href="#" class="btn fas fa-envelope"></a>
+              </div>
             </div>
+          </div>
         </nav>
       </main>
       <footer class="footer">
         <div class="inner footer-inner">
-          <p class="footer__text">Crafted with&nbsp;<i class="fas fa-heart">&nbsp;</i>by BlackTie.co.</p>
+          <div class="footer-inner-box">
+            <p class="footer__text">Crafted with&nbsp;<i class="fas fa-heart">&nbsp;</i>by BlackTie.co.</p>
+        </div>
         </div>
       </footer>
     </div>
