--- a/index.html
+++ b/index.html
@@ -46,78 +46,91 @@
             </div>
           </section>
         </div>
-        <article class="inner article-container">
+        <article class="article-container">
           <div class="inner article-container-inner">
             <h2 class="article-title">OUR LATEST WORK</h2>
-            <div class="article-images">
-              <a href="#" class="article-image-container">
-                <img src="./img/01.jpg" class="article-image">
-              </a>
-              <a href="#" class="article-image-container">
-                <img src="./img/02.jpg" class="article-image">
-              </a>
-              <a href="#" class="article-image-container">
-                <img src="./img/03.jpg" class="article-image">
-              </a>
-              <a href="#" class="article-image-container">
-                <img src="./img/04.jpg" class="article-image">
-              </a>
-              <a href="#" class="article-image-container">
-                <img src="./img/05.jpg" class="article-image">
-              </a>
-              <a href="#" class="article-image-container">
-                <img src="./img/06.jpg" class="article-image">
-              </a>
-            </div>
-          </div>
-          <div class="article-container-bottom">
-            <div class="article-container-bottom-box">
-              <p class="article-container__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
-            </div>
-            <div class="email-me__button-box">
-              <a href="#" class="email-me__button">Email Me!</a>
+            <ul class="article-images">
+              <li class="article-image-container">
+                <a href="#" class="article-image">
+                  <img src="./img/01.jpg">
+                </a>
+              </li>
+              <li class="article-image-container">
+                <a href="#" class="article-image">
+                  <img src="./img/02.jpg">
+                </a>
+              </li>
+              <li class="article-image-container">
+                <a href="#" class="article-image">
+                  <img src="./img/03.jpg">
+                </a>
+              </li>
+              <li class="article-image-container">
+                <a href="#" class="article-image">
+                  <img src="./img/04.jpg">
+                </a>
+              </li>
+              <li class="article-image-container">
+                <a href="#" class="article-image">
+                  <img src="./img/05.jpg">
+                </a>
+              </li>
+              <li class="article-image-container">
+                <a href="#" class="article-image">
+                  <img src="./img/06.jpg">
+                </a>
+              </li>
+            </ul>
+            <div class="article-container-bottom">
+              <div class="article-container-bottom-box">
+                <p class="article-container__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+              </div>
+              <div class="email-me__button-box">
+                <a href="#" class="email-me__button">Email Me!</a>
+              </div>
             </div>
           </div>
         </article>
         <section class="section-bottom">
           <div class="inner section-bottom-inner">
             <h2 class="section-bottom-title">OUR SKILLS</h2>
-            <div class="section-bottom-images">
-              <a href="#" class="section-bottom-image">
+            <ul class="section-bottom-images">
+              <li class="section-bottom-image">
                 <img src="./img/circle_01.png">
                 <p class="section-bottom-image__text">JavaScript</p>
-              </a>  
-              <a href="#" class="section-bottom-image">
+              </li>  
+              <li class="section-bottom-image">
                 <img src="./img/circle_02.png">
                 <p class="section-bottom-image__text">Bootstrap</p>
-              </a>  
-              <a href="#" class="section-bottom-image">
+              </li>  
+              
+              <li class="section-bottom-image">
                 <img src="./img/circle_03.png">
                 <p class="section-bottom-image__text">WordPress</p>
-              </a>  
-              <a href="#" class="section-bottom-image">
+              </li> 
+              <li class="section-bottom-image">
                 <img src="./img/circle_04.png">
                 <p class="section-bottom-image__text">Photoshop</p>
-              </a>  
-            </div>
+              </li>
+            </ul>
           </div>
         </section>
         <nav class="sns-wrapper">
           <div class="inner sns-wrapper-inner">
-            <div class="sns-content">
-              <div class="btn-box">
+            <ul class="sns-content">
+              <li class="btn-box">
                 <a href="#" class="btn fab fa-facebook-f"></a>
-              </div>
-              <div class="btn-box">
+              </li>
+              <li class="btn-box">
                 <a href="#" class="btn fas fa-basketball-ball"></a>
-              </div>
-              <div class="btn-box">
+              </li>
+              <li class="btn-box">
                 <a href="#" class="btn fab fa-twitter"></a>
-              </div>
-              <div class="btn-box">
+              </li>
+              <li class="btn-box">
                 <a href="#" class="btn fas fa-envelope"></a>
-              </div>
-            </div>
+              </li>
+            </ul>
           </div>
         </nav>
       </main>
