index.html bolt修正

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <header class="header">
         <div class="inner header-inner">
           <div class="header-left-btn-box">
-            <i class="fas fa-bolt"></i>
+            <i class="fas fa-bolt bolt-button"></i>
           </div>
           <div class="header-right-btn-box">
             <a href="#" class="contact-button">Contact</a>
@@ -31,53 +31,53 @@
       <main>
         <div class="theme">
           <div class="inner theme-inner">
-            <h1 class="main-theme">Bolt Theme</h1>
+            <h1 class="main-theme is-Raleway">Bolt Theme</h1>
             <p class="main-theme-p">FREE BOOTSTRAP THEMES</p>
           </div>
         </div>
-        <div class="section-container">
-          <section class="inner section-inner">
+        <section class="section-container">
+          <div class="inner section-inner">
             <div class="section-image-container">
-              <img src="./img/iphone.png" class="section-image">
+              <img src="./img/iphone.png" class="section-image"　alt="iphoneの画像">
             </div>
             <div class="section-text-container">
-              <h2 class="section-inner__title">what we can do?</h2>
+              <h2 class="section-inner__title is-Raleway">WHAT WE CAN DO?</h2>
               <p class="section-inner__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             </div>
-          </section>
-        </div>
+          </div>
+        </section>
         <article class="article-container">
           <div class="inner article-container-inner">
-            <h2 class="article-title">OUR LATEST WORK</h2>
+            <h2 class="article-title is-Raleway">OUR LATEST WORK</h2>
             <ul class="article-images">
               <li class="article-image-container">
                 <a href="#" class="article-image">
-                  <img src="./img/01.jpg">
+                  <img src="./img/01.jpg" alt="OUR LATEST WORKの画像">
                 </a>
               </li>
               <li class="article-image-container">
                 <a href="#" class="article-image">
-                  <img src="./img/02.jpg">
+                  <img src="./img/02.jpg"　alt="OUR LATEST WORKの画像">
                 </a>
               </li>
               <li class="article-image-container">
                 <a href="#" class="article-image">
-                  <img src="./img/03.jpg">
+                  <img src="./img/03.jpg"　alt="OUR LATEST WORKの画像">
                 </a>
               </li>
               <li class="article-image-container">
                 <a href="#" class="article-image">
-                  <img src="./img/04.jpg">
+                  <img src="./img/04.jpg"　alt="OUR LATEST WORKの画像">
                 </a>
               </li>
               <li class="article-image-container">
                 <a href="#" class="article-image">
-                  <img src="./img/05.jpg">
+                  <img src="./img/05.jpg"　alt="OUR LATEST WORKの画像">
                 </a>
               </li>
               <li class="article-image-container">
                 <a href="#" class="article-image">
-                  <img src="./img/06.jpg">
+                  <img src="./img/06.jpg"　alt="OUR LATEST WORKの画像">
                 </a>
               </li>
             </ul>
@@ -93,24 +93,31 @@
         </article>
         <section class="section-bottom">
           <div class="inner section-bottom-inner">
-            <h2 class="section-bottom-title">OUR SKILLS</h2>
+            <h2 class="section-bottom-title is-Raleway">OUR SKILLS</h2>
             <ul class="section-bottom-images">
               <li class="section-bottom-image">
-                <img src="./img/circle_01.png">
-                <p class="section-bottom-image__text">JavaScript</p>
+                <figure>
+                  <img src="./img/circle_01.png"　alt="OUR SKILLSの画像">
+                  <figcaption>JavaScript</figcaption>
+                </figure>
               </li>  
               <li class="section-bottom-image">
-                <img src="./img/circle_02.png">
-                <p class="section-bottom-image__text">Bootstrap</p>
+                <figure>
+                  <img src="./img/circle_02.png" alt="OUR SKILLSの画像">
+                  <figcaption>Bootstrap</figcaption>
+                </figure>
               </li>  
-              
               <li class="section-bottom-image">
-                <img src="./img/circle_03.png">
-                <p class="section-bottom-image__text">WordPress</p>
+                <figure>
+                  <img src="./img/circle_03.png" alt="OUR SKILLSの画像">
+                  <figcaption>WordPress</figcaption>
+                </figure>
               </li> 
               <li class="section-bottom-image">
-                <img src="./img/circle_04.png">
-                <p class="section-bottom-image__text">Photoshop</p>
+                <figure>
+                  <img src="./img/circle_04.png" alt="OUR SKILLSの画像">
+                  <figcaption>Photoshop</figcaption>
+                </figure>
               </li>
             </ul>
           </div>
