index.html bolt レスポンシブ版　途中経過

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <div class="inner header-inner">
             <i class="fas fa-bolt bolt-button"></i>
             <a href="#" class="contact-button">Contact</a>
-          <div class="hamburger-box">
-            <i class="fas fa-bars"></i>
-          </div>
+            <a href="#" class="hamburger-box">
+              <i class="fas fa-bars bars"></i>
+            </a>
         </div>
       </header>
       <main>
@@ -53,27 +53,27 @@
               </li>
               <li class="article-image-container">
                 <a href="#" class="article-image">
-                  <img src="./img/02.jpg"　alt="OUR LATEST WORKの画像">
+                  <img src="./img/02.jpg" alt="OUR LATEST WORKの画像">
                 </a>
               </li>
               <li class="article-image-container">
                 <a href="#" class="article-image">
-                  <img src="./img/03.jpg"　alt="OUR LATEST WORKの画像">
+                  <img src="./img/03.jpg" alt="OUR LATEST WORKの画像">
                 </a>
               </li>
               <li class="article-image-container">
                 <a href="#" class="article-image">
-                  <img src="./img/04.jpg"　alt="OUR LATEST WORKの画像">
+                  <img src="./img/04.jpg" alt="OUR LATEST WORKの画像">
                 </a>
               </li>
               <li class="article-image-container">
                 <a href="#" class="article-image">
-                  <img src="./img/05.jpg"　alt="OUR LATEST WORKの画像">
+                  <img src="./img/05.jpg" alt="OUR LATEST WORKの画像">
                 </a>
               </li>
               <li class="article-image-container">
                 <a href="#" class="article-image">
-                  <img src="./img/06.jpg"　alt="OUR LATEST WORKの画像">
+                  <img src="./img/06.jpg" alt="OUR LATEST WORKの画像">
                 </a>
               </li>
             </ul>
@@ -93,7 +93,7 @@
             <ul class="section-bottom-images">
               <li class="section-bottom-image">
                 <figure>
-                  <img src="./img/circle_01.png"　alt="OUR SKILLSの画像">
+                  <img src="./img/circle_01.png" alt="OUR SKILLSの画像">
                   <figcaption>JavaScript</figcaption>
                 </figure>
               </li>  
@@ -125,7 +125,7 @@
                 <a href="#" class="btn fab fa-facebook-f"></a>
               </li>
               <li class="btn-box">
-                <a href="#" class="btn fas fa-basketball-ball"></a>
+                <a href="#" class="btn fab fa-dribbble"></a>
               </li>
               <li class="btn-box">
                 <a href="#" class="btn fab fa-twitter"></a>
@@ -139,9 +139,7 @@
       </main>
       <footer class="footer">
         <div class="inner footer-inner">
-          <div class="footer-inner-box">
             <p class="footer__text">Crafted with&nbsp;<i class="fas fa-heart">&nbsp;</i>by BlackTie.co.</p>
-        </div>
         </div>
       </footer>
     </div>
