index.html bolt レスポンシブ版　修正

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             <i class="fas fa-bolt bolt-button"></i>
             <a href="#" class="contact-button">Contact</a>
             <a href="#" class="hamburger-box">
-              <i class="fas fa-bars bars"></i>
+              <div class="hamburger-border"></div>
+              <div class="hamburger-border"></div>
+              <div class="hamburger-border"></div>
             </a>
         </div>
       </header>
@@ -75,7 +77,7 @@
                 <a href="#" class="article-image">
                   <img src="./img/06.jpg" alt="OUR LATEST WORKの画像">
                 </a>
-              </li>
+              </li> 
             </ul>
             <div class="article-container-bottom">
               <div class="article-container-bottom-box">
